--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ajv": "^6.0.0",
     "alertifyjs": "^1.11.2",
     "animate.css": "^3.5.2",
-    "bootstrap": "^4.1.3",
+    "bootstrap": ">=4.1.3",
     "bootstrap-datepicker": "^1.7.1",
     "bootstrap-daterangepicker": "^2.1.30",
     "bootstrap-markdown": "^2.10.0",
@@ -83,6 +83,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/lodash": "^4.14.117",
     "@types/node": "~6.0.60",
+    "bootstrap": ">=4.1.3",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -95,6 +96,7 @@
     "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "fsevents": "^1.2.4"
   }
 }
